@@ -18,6 +18,7 @@ package com.mbrlabs.mundus.runtime.libgdx;
 
 import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.files.FileHandle;
+import com.badlogic.gdx.graphics.Color;
 import com.badlogic.gdx.graphics.Texture;
 import com.badlogic.gdx.graphics.g3d.Model;
 import com.badlogic.gdx.graphics.g3d.ModelInstance;
@@ -84,6 +85,7 @@ public class SimpleMundusLoader {
                 Fog fog = new Fog();
                 fog.density = fogDTO.getDensity();
                 fog.gradient = fogDTO.getGradient();
+                fog.color = new Color(fogDTO.getColor());
                 scene.environment.setFog(fog);
             }
 
